					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/12/16
	* Rev. 14596 Added missing pet db documentation for fields 'attack_rate', 'defence_attack_rate', 'change_target_rate', 'pet_script' and 'loyal_script' based on the one provided by frenzmu06 (bugreport:4636, follow up to r13752). [Ai4rei]
2010/12/13
	* Rev. 14590 Added pet_db2.txt to make it apparent, that pet db has support for customs as well. [Ai4rei]
	- Fixed typo 'HungeyDelay' into 'HungryDelay' in pet database description (bugreport:4636, since r13752).
2010/12/05
	* Rev. 14559 Updated some items to use bonus bAddItemHealRate, and healpower2. [L0ne_W0lf]
2010/12/04
	* Rev. 14557 Added 3rd class stat bonuses (source: kRO website, February 2010). [Ai4rei]
2010/12/02
	* Rev. 14555 Corrected incorrect bonuses relating to bAddMonsterDropItem/Group. (burgerport:4569) [L0ne_W0lf]
	* Updated the IG_Ore, IG_Food, IG_Recovery and IG_Jewel item groups to official items/rates.
	- As a result bAddMonsterDropItemGroup now uses the highest rate in group as it's base rate.
2010/12/02
	* Rev. 14552 Updated some more cash shop boxes to use rentitem instead of getitem. [L0ne_W0lf]
	* Added mercenary skills for Mimic, Disguise, Alice, Doppelganger, and Egnigem.
	* Rev. 14549 Updated the item types for several of the cash item boxes to 18. [L0ne_W0lf]
	* Fixed the Exorcism_Bible bonus, missing {}'s for who knows how long. (bugreport:4342)
	* Updated Brasilis monsters stats again, care of Playtester.
2010/11/30
	* Rev. 14529 Fixed a mistake (excess dummy name) in dead branch list fallback value (since r32). [Ai4rei]